2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Remove debug writelines. Disable
	  process-enter-on-exact-match behaviour change or now.

2010-06-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.DockToolbars/DockToolbar.cs: Reset
	  custom size requests before calculating the real size
	  request. Fixes issue when getting the default size.

	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Ensure the default
	  layout is set after loading the workbench memento.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* icons/SplashScreen.png: Updated.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Add new
	  contributors.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* BuildVariables.cs: Bump MD version.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs: Fixed 'Bug
	  613539 - DOBa does not complete to DynamicObjectBase'.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionData.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Fixed 'Bug 613830 - Aggressive auto-complete list matching
	  of keywords interferes with typing'.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide/DesktopService.cs:
	* MonoDevelop.Ide.Desktop/PlatformService.cs: Added
	  CanOpenTerminal/OpenInTerminal.

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FileOperationsBuilderExtension.cs:
	  Use platform service CanOpenTerminal/OpenInTerminal instead
	  of hardcoded gnome-terminal.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Templates/FileTemplate.cs: Use
	  List<FileTemplate> not ArrayList.

	* MonoDevelop.Ide.Projects/NewFileDialog.cs: Sort the template
	  list by name.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>
